# kanban

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose-test.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2024_09_10_1721-94a7024aa447_initial_tables.py  2024_09_10_1726-f262857d0201_create_tabel_space.py  2024_09_27_1406-33df243a5ba9_create_users_table.py  2024_09_27_1821-264b6727c86b_users_add_is_active_field.py  2024_09_28_1813-387880af9688_set_unique_username_field_in_users.py  2024_09_29_1933-2d338ef6c0a4_set_unique_email_field_in_users.py  2024_09_29_1951-fb8130f4432c_delete_password_fiedl_in_users.py  2024_09_29_1952-79a8b3601c39_add_password_field_in_users.py  2024_10_16_1610-cca438fb8e65_add_space_table.py  2024_10_16_1615-948378719b01_renamed_table_space_to_board.py  2024_10_16_1633-201f7e177d87_add_column_table.py  2024_10_16_1634-4159020619f7_add_task_table.py  2024_10_16_1753-ebb0606fa7fd_add_creator_and_executor_field_in_task_.py  2024_10_17_1148-993cf4240572_board_table_user_is_user_id.py  2024_10_17_1438-0c56397c7143_add_deleted_at_field.py  2024_10_17_1635-6e95e37df455_fix_delete_at_field_time_zone.py  2024_10_18_1230-14ff1d8785fb_fix_created_at_field_time_zone.py  2024_10_19_1729-0944fdf1bead_add_completed_in_task_table.py
db/: db_connection.py  settings.py
nginx/: nginx.conf
src/api/: auth.py  board.py  column.py  task.py  user.py
src/core/: logger.py  settings.py
src/db/: db_connection.py  settings.py
src/models/: __init__.py  base_model.py  board.py  (+2 more)
tests/: conftest.py  pytest.ini
(+17 files in other folders)
